feat: Añadir nuevas rutas y traducciones para alimentación y cuidados de alimentación

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -48,5 +48,25 @@
   "Health Records": "Historias Clínicas",
   "Health Record": "Historia Clínica",
   "Dispositions": "Disposiciones",
-  "Disposition": "Disposición"
+  "Disposition": "Disposición",
+  "Feedings": "Alimentación",
+  "Feeding": "Alimentación",
+  "Feeding Types": "Tipos de Alimentación",
+  "Feeding Type": "Tipo de Alimentación",
+  "Feeding Frequencies": "Frecuencias de Alimentación",
+  "Feeding Frequency": "Frecuencia de Alimentación",
+  "Feeding Portions": "Porciones de Alimentación",
+  "Feeding Portion": "Porción de Alimentación",
+  "Care Feedings": "Cuidados de Alimentación",
+  "Care Feeding": "Cuidado de Alimentación",
+  "Care Feeding Types": "Tipos de Cuidado de Alimentación",
+  "Care Feeding Type": "Tipo de Cuidado de Alimentación",
+  "Care Feeding Frequencies": "Frecuencias de Cuidado de Alimentación",
+  "Care Feeding Frequency": "Frecuencia de Cuidado de Alimentación",
+  "Care Feeding Portions": "Porciones de Cuidado de Alimentación",
+  "Care Feeding Portion": "Porción de Cuidado de Alimentación",
+  "Care Id": "Cuidado",
+  "Feeding Type Id": "Tipo de Alimentación",
+  "Feeding Frequency Id": "Frecuencia de Alimentación",
+  "Feeding Portion Id": "Porción de Alimentación"
 }
