feat: Integrar servicios transaccionales para adopciones y liberaciones

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -9,10 +9,10 @@
   "Delete": "Eliminar",
   "Are you sure to delete?": "¿Seguro que deseas eliminar?",
 
-  "Reports": "Reportes",
-  "Report": "Reporte",
-  "Animal Files": "Hojas de Animales",
-  "Animal File": "Hoja Animal",
+  "Reports": "Hallazgos de animales en peligro",
+  "Report": "Hallazgo de animal en peligro",
+  "Animal Files": "Fichas de Animales",
+  "Animal File": "Ficha Animal",
   "Animals": "Animales",
   "Animal": "Animal",
   "Species": "Especies",
